--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     //agregando la libreria lottie a nuestro proyecto
     implementation 'com.airbnb.android:lottie:3.4.0'
+    //desing
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    //libreria de circle menu
+    implementation 'com.ramotion.circlemenu:circle-menu:0.3.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
 }
