--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,14 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0-rc01'
     //libreria de circle menu
     implementation 'com.ramotion.circlemenu:circle-menu:0.3.2'
+    //show case view
+    implementation 'com.github.amlcurran.showcaseview:library:5.4.3'
+    //toas
+    implementation 'com.muddzdev:styleabletoast:2.2.3'
+    // imagenes
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //botnoes
+    implementation "com.github.skydoves:elasticviews:2.0.7"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
