--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -43,6 +44,28 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //botnoes
     implementation "com.github.skydoves:elasticviews:2.0.7"
+    implementation 'com.google.firebase:firebase-auth:16.0.5'
+
+    implementation 'com.google.firebase:firebase-database:16.0.4'
+
+    //picaso
+    implementation 'com.codesgood:justifiedtextview:1.1.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    //implementation 'com.squareup.picasso:picasso:2.71828'
+    // For control over item selection of both touch and mouse driven selection
+    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
+    implementation 'com.google.android.material:material:1.0.0-rc01'
+    //botonees
+    implementation "com.github.skydoves:elasticviews:2.0.7"
+
+    implementation 'com.google.firebase:firebase-inappmessaging-display:17.0.4'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation 'com.firebaseui:firebase-ui:0.4.0'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+
+
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
